# jessy

./: .clang  .clang_complete  .color_coded  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.md  README.rst  build.sh
.github/ISSUE_TEMPLATE/: task.md
cmake/Configuration/: CXXConfiguration.cmake  LinkerConfiguration.cmake  NasmConfiguration.cmake
cmake/Modules/: AddModule.cmake  AddSubsystem.cmake  FindExternalTool.cmake  FindGDB.cmake  FindGrubMkrescue.cmake  FindQemu.cmake
cmake/Scripts/: GenerateGrubConfig.cmake
cmake/Toolchains/: ClangCrossToolchain.cmake  GNUCrossToolchain.cmake
include/: CMakeLists.txt  vga.hpp
include/bootstrap/: addresses.hpp  common_constants.s  page_tables.hpp
include/core/: error.hpp  int_types.hpp  memory.hpp  source_location.hpp  strong_type.hpp  type_traits.hpp  utility.hpp
include/iso/: cstddef.hpp  cstdint.hpp  cstring.hpp  optional.hpp  source_location.hpp  type_traits.hpp  utility.hpp
include/memory/: page.hpp  page_allocator.hpp
include/multiboot/: information.hpp  tags.hpp
include/multiboot/tags/: basic_memory_information.hpp  boot_command_line.hpp  boot_device.hpp  boot_loader_name.hpp  elf_symbols.hpp  framebuffer_information.hpp  memory_map.hpp  module.hpp  tag.hpp  types.hpp
include/units/: bytes.hpp
include/vga/: text.hpp
scripts/: jessy.ld
src/: CMakeLists.txt  boot.asm  crti.asm  kernel.ld  main.cpp
src/bootstrap/: CMakeLists.txt  boot.asm  boot.s  common_constants.asm  multiboot_header.asm  multiboot_header.s  transition.asm  transition.s
src/core/: CMakeLists.txt  error.cpp  memory.asm  memory.s
src/kernel/: CMakeLists.txt  kernel.ld  main.cpp
src/memory/: CMakeLists.txt  page.cpp  page_allocator.cpp
src/multiboot/: CMakeLists.txt  boot_command_line.cpp  boot_loader_name.cpp  information.cpp
src/runtime/: CMakeLists.txt  crti.asm  crtn.asm
src/vga/: CMakeLists.txt  text.cpp
support/: CMakeLists.txt
support/env/: env.sh
support/gdb/: default.gdb
support/grub/: grub.cfg
support/tools/: build.sh  debug.sh  run.sh
